# triton.cpp

./: .gitignore  CMakeLists.txt  README.md  add_kernel.ttir  build.sh  compile.sh  dwarfdump.sh  run.sh
runtime/: CMakeLists.txt  cubin_launcher.cc  cubin_launcher.h
scripts/: sync.sh
